--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.2.2",
     "@testing-library/user-event": "^12.6.0",
+    "drei": "^2.2.12",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
+    "react-spring": "^8.0.27",
+    "react-three-fiber": "^5.3.10",
+    "sass": "^1.30.0",
+    "three": "^0.124.0",
     "web-vitals": "^0.2.4"
   },
   "scripts": {
